...
    final currentState = _formKey.currentState;
    if (currentState == null) return;

    final isValid = currentState.validate(focusOnInvalid: false);

    final usernameValue = currentState.fields['username']?.value;
    final emailValue = currentState.fields['email']?.value;
    final passwordValue = currentState.fields['password']?.value;
    final passwordConfirmValue = currentState.fields['password_confirm']?.value;

    final allFilled = usernameValue.isNotEmpty &&
        emailValue.isNotEmpty &&
        passwordValue.isNotEmpty &&
        passwordConfirmValue.isNotEmpty;
...
          Expanded(
            flex: 1,
            child: SingleChildScrollView(
              child: Column(
                children: [
                  //a kulcs paraméterek a teszteléshez kellenek!
                  _buildUsernameWidget(const Key("userName")),
                  _buildEmailWidget(const Key("emailAddress")),
                  _buildPasswordWidget(const Key("passWord")),
                  _buildPasswordConfirmWidget(const Key("passWordConfirm")),
                  _buildSignupWidget(context, const Key("signUp")),
                ],
              ),
...
