...
              const Key("chatNavBar"), //teszteléshez
            ),
            _bottomAppBarItem(
              Icons.person_rounded,
              Preferences.isHungarian ? "Ismerősök" : "Friends",
              1,
              const Key("friendsNavBar"), //teszteléshez
            ),
          ],
        ),
      ),
    );
  }
...
