...
                      fontSize: 20,
                    ),
                  ),
                  // subtitle: Text(user["status"],
                  //     style: const TextStyle(color: Colors.grey)),
                  trailing: ElevatedButton(
                    key: Key("addFriend"),
                    style: ElevatedButton.styleFrom(
                      backgroundColor: Colors.deepPurpleAccent,
                    ),
                    onPressed: () => _sendFriendRequest(user["id"]),
                    child: const Text(
                      "Jelölés",
...
