...
    return Row(
      children: [
        Expanded(
          child: Padding(
            padding: const EdgeInsets.symmetric(horizontal: 10.0),
            child: ElevatedButton(
              key: const Key("logIn"),
              style: ElevatedButton.styleFrom(
                backgroundColor: Colors.deepPurpleAccent,
                foregroundColor: Colors.white,
                //ha _isLogInDisabled = true, akkor ki van kapcsolva amit az onPressed alapján tud meg a gomb!
                disabledBackgroundColor: Colors.grey[700],
                disabledForegroundColor: Colors.white,
...
